--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,15 +11,14 @@ android {
         minSdkVersion 26
         targetSdkVersion 36
         versionCode 1
-        versionName "0.0.1-alpha01"
+        versionName "0.0.1-alpha04"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
